--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "@babel/plugin-proposal-private-property-in-object":"7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "eslint": "^8.57.0"
   }
 }
